--- a/projects/students_dropout/index.html
+++ b/projects/students_dropout/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Análisis de Deserción y Éxito Académico | Jean C. Herrán</title>
+    <title>Análisis de Deserción y Éxito Académico | Jean C. Herran</title>
     <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
@@ -104,7 +104,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-            <a class="navbar-brand" href="../../index.html">Jean C. Herrán</a>
+            <a class="navbar-brand" href="../../index.html">Jean C. Herran</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
