--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jean C. Herrán | Portafolio de Data Science</title>
+    <title>Jean C. Herran | Portafolio de Data Science</title>
     <link rel="stylesheet" href="styles.css">
     <!-- Bootstrap CSS -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
@@ -52,7 +52,7 @@
     <!-- Navegación -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#">Jean C. Herrán</a>
+            <a class="navbar-brand" href="#">Jean C. Herran</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -71,7 +71,7 @@
     <header class="hero-section text-center" id="hero">
         <div class="container">
             <h1 class="display-4 fw-bold mb-3">Data Scientist & Analista de Datos</h1>
-            <p class="lead fs-4 mb-5">Transformando datos complejos en insights accionables y soluciones basadas en evidencia</p>
+            <!--<p class="lead fs-4 mb-5">Transformando datos complejos en insights accionables y soluciones basadas en evidencia</p>-->
             <div class="d-flex justify-content-center gap-3">
                 <a href="#projects" class="btn btn-light btn-lg">Ver Proyectos</a>
                 <a href="#contact" class="btn btn-outline-light btn-lg">Contacto</a>
@@ -122,7 +122,7 @@
                             <div>
                                 <div class="d-flex justify-content-between mb-1">
                                     <span>Python</span>
-                                    <span>85%</span>
+                                    <span>80%</span>
                                 </div>
                                 <div class="progress" style="height: 8px;">
                                     <div class="progress-bar" role="progressbar" style="width: 85%; background-color: #0062E6;" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
@@ -156,7 +156,7 @@
                             <p class="card-text">Análisis exhaustivo de un conjunto de datos médicos para identificar los factores determinantes en el diagnóstico de enfermedades cardíacas. Incluye exploración de datos, visualización avanzada y modelado predictivo con Random Forest.</p>
                             <div class="d-flex gap-2">
                                 <a href="projects/heart-disease-analysis/index.html" class="btn btn-primary">Ver Proyecto</a>
-                                <a href="https://github.com/tuusuario/heart-disease-analysis" class="btn btn-outline-secondary">GitHub Repository</a>
+                                <a href="https://github.com/JeanC221/heart-disease-analysis" class="btn btn-outline-secondary">GitHub Repository</a>
                             </div>
                             <p class="card-text mt-2"><small class="text-muted">Tecnologías: Python, Pandas, Scikit-learn, Matplotlib, Seaborn</small></p>
                         </div>
@@ -169,7 +169,7 @@
             <div class="row g-0">
                 <div class="col-md-4">
                     <div class="project-image-container p-3">
-                        <img src="projects/student-dropout-analysis/images/academic_status_distribution.png" 
+                        <img src="projects/student-dropout-analysis/images/feature_importance.png" 
                              class="project-image rounded" 
                              alt="Análisis de deserción y éxito académico">
                     </div>
@@ -179,7 +179,7 @@
                         <h3 class="card-title">Análisis de Deserción y Éxito Académico Estudiantil</h3>
                         <p class="card-text">Identificación de factores clave que influyen en la permanencia y graduación de estudiantes universitarios. Este análisis examina variables demográficas, académicas y socioeconómicas para predecir el riesgo de deserción y desarrollar estrategias de intervención temprana.</p>
                         <div class="d-flex gap-2">
-                            <a href="projects/student-dropout-analysis/index.html" class="btn btn-primary">Ver Proyecto</a>
+                            <a href="projects/student-dropout/index.html" class="btn btn-primary">Ver Proyecto</a>
                             <a href="https://github.com/JeanC221/student-dropout-analysis" class="btn btn-outline-secondary">GitHub Repository</a>
                         </div>
                         <p class="card-text mt-2"><small class="text-muted">Tecnologías: Python, Pandas, Scikit-learn, Matplotlib, Seaborn</small></p>
@@ -201,7 +201,7 @@
                             <h3 class="card-title">Lenguajes de Programación</h3>
                             <ul class="list-unstyled">
                                 <li class="mb-2">Python</li>
-                                <li class="mb-2">R</li>
+                                <li class="mb-2">R (básico)</li>
                                 <li>JavaScript (básico)</li>
                             </ul>
                         </div>
@@ -215,7 +215,7 @@
                             <ul class="list-unstyled">
                                 <li class="mb-2">Pandas</li>
                                 <li class="mb-2">NumPy</li>
-                                <li>Excel Avanzado</li>
+                                <li>Excel </li>
                             </ul>
                         </div>
                     </div>
@@ -242,7 +242,6 @@
                             <h3 class="card-title">Machine Learning</h3>
                             <ul class="list-unstyled">
                                 <li class="mb-2">Scikit-learn</li>
-                                <li class="mb-2">TensorFlow</li>
                                 <li>Modelos Supervisados</li>
                             </ul>
                         </div>
@@ -297,19 +296,15 @@
                             
                             <div class="d-flex justify-content-center mb-4">
                                 <div class="mx-2">
-                                    <a href="https://linkedin.com/in/yourprofile" class="btn btn-outline-primary rounded-circle" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
+                                    <a href="https://linkedin.com/in/jean-carlo-herran-1b131127b" class="btn btn-outline-primary rounded-circle" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
                                         <i class="fab fa-linkedin-in"></i>
                                     </a>
                                 </div>
                                 <div class="mx-2">
-                                    <a href="https://github.com/yourusername" class="btn btn-outline-primary rounded-circle" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
+                                    <a href="https://github.com/JeanC221" class="btn btn-outline-primary rounded-circle" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
                                         <i class="fab fa-github"></i>
                                     </a>
                                 </div>
-                                <div class="mx-2">
-                                    <a href="https://twitter.com/yourhandle" class="btn btn-outline-primary rounded-circle" style="width: 50px; height: 50px; display: flex; align-items: center; justify-content: center;">
-                                        <i class="fab fa-twitter"></i>
-                                    </a>
                                 </div>
                             </div>
                             
@@ -326,9 +321,8 @@
         <div class="container">
             <p class="mb-2">© 2025 Jean C. Herrán | Data Scientist & Analista de Datos</p>
             <div class="social-icons">
-                <a href="https://linkedin.com/in/yourprofile" class="text-white me-3"><i class="fab fa-linkedin"></i></a>
-                <a href="https://github.com/yourusername" class="text-white me-3"><i class="fab fa-github"></i></a>
-                <a href="https://twitter.com/yourhandle" class="text-white"><i class="fab fa-twitter"></i></a>
+                <a href="https://linkedin.com/in/jean-carlo-herran-1b131127b" class="text-white me-3"><i class="fab fa-linkedin"></i></a>
+                <a href="https://github.com/JeanC221" class="text-white me-3"><i class="fab fa-github"></i></a>
             </div>
         </div>
     </footer>
