--- a/projects/heart-disease-analysis/index.html
+++ b/projects/heart-disease-analysis/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Análisis de Factores de Riesgo de Enfermedades Cardíacas | Mi Portafolio</title>
+    <title>Análisis de Factores de Riesgo de Enfermedades Cardíacas | Jean C. Herran</title>
     <link rel="stylesheet" href="../../styles.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <style>
