--- a/index.html
+++ b/index.html
@@ -156,7 +156,6 @@
                             <p class="card-text">Análisis exhaustivo de un conjunto de datos médicos para identificar los factores determinantes en el diagnóstico de enfermedades cardíacas. Incluye exploración de datos, visualización avanzada y modelado predictivo con Random Forest.</p>
                             <div class="d-flex gap-2">
                                 <a href="projects/heart-disease-analysis/index.html" class="btn btn-primary">Ver Proyecto</a>
-                                <a href="https://github.com/JeanC221/heart-disease-analysis" class="btn btn-outline-secondary">GitHub Repository</a>
                             </div>
                             <p class="card-text mt-2"><small class="text-muted">Tecnologías: Python, Pandas, Scikit-learn, Matplotlib, Seaborn</small></p>
                         </div>
@@ -180,7 +179,6 @@
                         <p class="card-text">Identificación de factores clave que influyen en la permanencia y graduación de estudiantes universitarios. Este análisis examina variables demográficas, académicas y socioeconómicas para predecir el riesgo de deserción y desarrollar estrategias de intervención temprana.</p>
                         <div class="d-flex gap-2">
                             <a href="projects/students-dropout/index.html" class="btn btn-primary">Ver Proyecto</a>
-                            <a href="https://github.com/JeanC221/students-dropout" class="btn btn-outline-secondary">GitHub Repository</a>
                         </div>
                         <p class="card-text mt-2"><small class="text-muted">Tecnologías: Python, Pandas, Scikit-learn, Matplotlib, Seaborn</small></p>
                     </div>
@@ -319,7 +317,7 @@
     <!-- Pie de página -->
     <footer class="bg-dark text-white text-center py-4">
         <div class="container">
-            <p class="mb-2">© 2025 Jean C. Herrán | Data Scientist & Analista de Datos</p>
+            <p class="mb-2">© 2025 Jean C. Herran | Data Scientist & Analista de Datos</p>
             <div class="social-icons">
                 <a href="https://linkedin.com/in/jean-carlo-herran-1b131127b" class="text-white me-3"><i class="fab fa-linkedin"></i></a>
                 <a href="https://github.com/JeanC221" class="text-white me-3"><i class="fab fa-github"></i></a>
