--- a/index.html
+++ b/index.html
@@ -164,26 +164,25 @@
                 </div>
             </div>
             
-            <!-- Marcador para Proyecto 2 (próximamente) -->
-            <div class="card mb-5">
-                <div class="row g-0">
-                    <div class="col-md-4">
-                        <div class="bg-light p-3 d-flex align-items-center justify-content-center h-100" style="min-height: 250px;">
-                            <div class="text-center text-muted">
-                                <i class="fas fa-chart-line fa-4x mb-3"></i>
-                                <p>Próximo proyecto en desarrollo</p>
-                            </div>
-                        </div>
+            <!-- Proyecto 2: Análisis de Deserción Estudiantil -->
+        <div class="card mb-5">
+            <div class="row g-0">
+                <div class="col-md-4">
+                    <div class="project-image-container p-3">
+                        <img src="projects/student-dropout-analysis/images/academic_status_distribution.png" 
+                             class="project-image rounded" 
+                             alt="Análisis de deserción y éxito académico">
                     </div>
-                    <div class="col-md-8">
-                        <div class="card-body">
-                            <h3 class="card-title">Análisis de Datos Económicos Globales</h3>
-                            <p class="card-text">Próximamente: Un análisis comparativo de tendencias económicas globales utilizando datos del Índice de Precios al Consumidor de diferentes países.</p>
-                            <div class="d-flex gap-2">
-                                <button class="btn btn-secondary" disabled>Próximamente</button>
-                            </div>
-                            <p class="card-text mt-2"><small class="text-muted">Tecnologías: Python, Pandas, Plotly, Geospatial Analysis</small></p>
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h3 class="card-title">Análisis de Deserción y Éxito Académico Estudiantil</h3>
+                        <p class="card-text">Identificación de factores clave que influyen en la permanencia y graduación de estudiantes universitarios. Este análisis examina variables demográficas, académicas y socioeconómicas para predecir el riesgo de deserción y desarrollar estrategias de intervención temprana.</p>
+                        <div class="d-flex gap-2">
+                            <a href="projects/student-dropout-analysis/index.html" class="btn btn-primary">Ver Proyecto</a>
+                            <a href="https://github.com/JeanC221/student-dropout-analysis" class="btn btn-outline-secondary">GitHub Repository</a>
                         </div>
+                        <p class="card-text mt-2"><small class="text-muted">Tecnologías: Python, Pandas, Scikit-learn, Matplotlib, Seaborn</small></p>
                     </div>
                 </div>
             </div>
